* USA ePay: add support for recurring transactions, custom fields, and line items [lancecarlson] #3069
* Add dLocal gateway [curiousepic] #3709
* dLocal: Require secret_key [curiousepic] #3080
* Adyen: Implement 3DS [nfarve] #3076
* Adyen: Add 3DS Fix [nfarve] #3081
* Payeezy: Add `stored_credentials` [nfarve] #3083
* Fix CVC validation for 0 length CVC [filipebarcos] #3082

== Version 1.88.0 (November 30, 2018)
* Added ActiveSupport/Rails master support [Edouard-chin] #3065

== Version 1.87.0 (November 29, 2018)
* Barclaycard Smartpay: Improves Error Handling [deedeelavinder] #3026
* Braintree: Fix passing phone-only billing address [curiousepic] #3025
* Litle: Capitalize check account type [curiousepic] #3028
* Braintree: Account for nil billing address fields [curiousepic] #3029
* Realex: Add verify [kheang] #3030
* Braintree: Actually account for nil address fields [curiousepic] #3032
* Mercado Pago: do not infer card type [bpollack] #3038
* Credorax: allow sending submerchant ID (h3 parameter) [bpollack] #3040
* Worldpay: Pass stored credential option fields [curiousepic] #3041
* Make behavior of nil CC numbers more consistent [guaguasi] #3010
* Moneris: Adds Credential on File logic [deedeelavinder] #3042
* Adyen: Return AVS and CVC Result [nfarve] #3044
* Paymentez: Supports phone field, does not send if empty [molbrown] #3043
* Braintree: Account for nil address with existing customer [curiousepic] #3047
* Optimal Payment: Add verify capabilities #3052
* Moneris: Allows cof_enabled gateway to process non-cof transactions [deedeelavinder] #3051
* Cenpos: update supported countries [bpollack] #3055
* CyberSource: update supported countries [bpollack] #3055
* MiGS: update supported countries [bpollack] #3055
* Clearhaus: update submission data format [bpollack] #3053
* Forte: Allow void on capture [nfarve] #3059

== Version 1.86.0 (October 26, 2018)
* UsaEpayTransaction: Support UMcheckformat option for echecks [dtykocki] #3002